--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         message: "We use cookies to improve your site experience and comply with privacy laws.",
         dismiss: "Got it!",
         link: "Learn more",
-        href: "/privacy"
+        href: "/pryceptor-landing/privacy.html"
       }
     });
   });
