--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- VISION -->
 <section id="vision" class="container py-5">
   <h2 class="mb-4">Our Vision</h2>
-  <p>Our name, <strong>Praeceptor</strong>, is inspired by <em>Philip Melanchthon</em>—a quiet but formidable scholar of the Reformation, known as the <strong>Praeceptor Germaniae</strong> (“Teacher of Germany”). Without Melanchthon, there would be no Martin Luther. He was the genius behind the curtain, the researcher, the scholar, the analyst, if you will, providing the tools and insights to start a revolution.</p>
+  <p>Our name, <strong>Pryceptor</strong>, is inspired by <em>Philip Melanchthon</em>—a quiet but formidable scholar of the Reformation, known as the <strong>Praeceptor Germaniae</strong> (“Teacher of Germany”). Without Melanchthon, there would be no Martin Luther. He was the genius behind the curtain, the researcher, the scholar, the analyst, if you will, providing the tools and insights to start a revolution.</p>
   <p>Like Melanchthon, we believe in supporting decision-makers from behind the scenes—with research, truth, and customized intelligence that allows others to shine in the spotlight. We aren’t here for the credit; we are here for the outcomes.</p>
   <p>We design hands-on, FERPA-compliant machine learning, AI, and analytics solutions that empower community colleges to act boldly on the truth hidden in their data. Real insight can’t come from one-size-fits-all dashboards; and privacy cannot be an afterthought.</p>
   <p>We don’t sell templates. We architect solutions, align with compliance, and walk quietly behind the decision-makers we empower.</p>
