--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <!-- AUDIT FORM -->
 <section id="audit" class="container py-5">
-  <h2 class="mb-4 text-center">Book Your Free Data Readiness Audit</h2>
+  <h2 class="mb-4 text-center">Book Your Free Consultation</h2>
   <form action="https://formspree.io/f/xvgqvdgy" method="POST" class="mx-auto" style="max-width: 600px;">
     <div class="mb-3">
       <label for="name" class="form-label">Full Name</label>
