--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <label for="message" class="form-label">What would you like us to know?</label>
       <textarea name="message" class="form-control" rows="4"></textarea>
     </div>
-    <button type="submit" class="btn btn-dark w-100">Request Audit</button>
+    <button type="submit" class="btn btn-dark w-100">Request Consultation</button>
   </form>
 </section>
 
@@ -192,4 +192,5 @@
 </script>
 
 </body>
+
 </html>
