--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           Custom-built machine learning and analytics solutions that reveal actionable insights—without breaking privacy laws.
         </p>
         <div class="mt-8 flex flex-wrap gap-3">
-          <a href="#audit" class="inline-flex items-center rounded-md bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400 transition shadow-glow">
+          <a href="newsletter.html" class="inline-flex items-center rounded-md bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400 transition shadow-glow">
             Sign Up For Our Free Newsletter
           </a>
           <a href="#vision" class="inline-flex items-center rounded-md border border-white/20 px-6 py-3 hover:bg-white/5 transition">
