--- a/newsletter.html
+++ b/newsletter.html
@@ -149,7 +149,7 @@
       <p class="mt-3 text-white/80">No spam. Unsubscribe anytime.</p>
 
       <!-- Formspree signup (collects first, last, email) -->
-      <form action="https://formspree.io/f/yournewsletterformid" method="POST" class="mt-8 grid gap-4 text-left">
+      <form action="https://formspree.io/f/xdkdpqel" method="POST" class="mt-8 grid gap-4 text-left">
         <!-- Honeypot (spam mitigation) -->
         <input type="text" name="_gotcha" class="hidden" tabindex="-1" autocomplete="off">
 
